fixed: icon spacing

--- a/style.css
+++ b/style.css
@@ -393,6 +393,3 @@ section {
     color: royalblue;
 }
 
-.fab{
-    padding-right: 2rem;
-}
